@@ -1,3 +1,6 @@
+2012-05-09
+ * improves multiple channel WCS headers writing
+
 2012-05-08
  * channel coordinates
 
